<resources>
    <string name="app_name">StickyN</string>
    <string name="title">Title</string>
    <string name="empty_note">Empty note</string>
    <string name="menu">Menu</string>
    <string name="note_title_hint">Note Title</string>
    <string name="note_content_hint">Type your note here</string>
    <string name="save">Save</string>
    <string name="choose_theme">Choose Theme:</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="apply">Apply</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="underline">Underline</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="bullet_list">Bullet List</string>
    <string name="add_image">Add Image</string>
    <string name="home_title">StickyN Home</string>
    <string name="home_instruction">Add a widget to your home screen to start creating sticky notes!</string>
    <string name="back">Back</string>
    <string name="restore_notes">Restore Notes</string>
    <string name="readme"><![CDATA[
        <b>🚀 App Hub</b><br/>
        <i>Version 1.0</i><br/>
        Created by: <u>Alexy1113</u><br/><br/>

        <b>☕ Enjoying the app?</b><br/>
        If you find my work helpful, consider fueling future updates with a coffee!<br/>
        👉 <a href="https://buymeacoffee.com/a13xy"><b>TIP THE CREATOR</b></a><br/>

        <br/>_______________<br/>
        <b>WHAT\'S INSIDE:</b><br/>
        ✨ <b>Dynamic Themes:</b> Automatically matches your <b>light or dark mode</b>.<br/>
        📱 <b>Fluid Scroll:</b> Navigate through notes with a smooth swipe.<br/>
        🖼️ <b>Smart Media:</b> Tap to view images full screen or delete while editing.<br/>
        ♻️ <b>Data Safety:</b> If you delete a widget, don\'t worry! It stays in memory and can be recovered via <b>Restore Notes</b>.<br/>
        _______________<br/><br/>
    ]]></string>
    <string name="normal_text_size">Normal text size</string>
    <string name="backup_list_is_empty">No notes to restore</string>
</resources>
